@@ -12,9 +12,9 @@ import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.ValidationException;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.ssl.SslKeyConfig;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.xpack.core.ssl.CertParsingUtils;
-import org.elasticsearch.xpack.core.ssl.X509KeyPairSettings;
 import org.elasticsearch.xpack.idp.saml.sp.SamlServiceProviderResolver;
 import org.elasticsearch.xpack.idp.saml.sp.ServiceProviderDefaults;
 import org.elasticsearch.xpack.idp.saml.sp.WildcardServiceProviderResolver;
@@ -22,13 +22,11 @@ import org.opensaml.saml.saml2.metadata.ContactPersonTypeEnumeration;
 import org.opensaml.security.x509.X509Credential;
 import org.opensaml.security.x509.impl.X509KeyManagerX509CredentialAdapter;
 
-import javax.net.ssl.X509KeyManager;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.security.PrivateKey;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -38,6 +36,8 @@ import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import javax.net.ssl.X509KeyManager;
 
 import static org.opensaml.saml.common.xml.SAMLConstants.SAML2_POST_BINDING_URI;
 import static org.opensaml.saml.common.xml.SAMLConstants.SAML2_REDIRECT_BINDING_URI;
@@ -51,33 +51,68 @@ public class SamlIdentityProviderBuilder {
     private static final List<String> ALLOWED_NAMEID_FORMATS = List.of(TRANSIENT);
     public static final Setting<String> IDP_ENTITY_ID = Setting.simpleString("xpack.idp.entity_id", Setting.Property.NodeScope);
 
-    public static final Setting<URL> IDP_SSO_REDIRECT_ENDPOINT = new Setting<>("xpack.idp.sso_endpoint.redirect", "https:",
-        value -> parseUrl("xpack.idp.sso_endpoint.redirect", value), Setting.Property.NodeScope);
-    public static final Setting<URL> IDP_SSO_POST_ENDPOINT = new Setting<>("xpack.idp.sso_endpoint.post", "https:",
-        value -> parseUrl("xpack.idp.sso_endpoint.post", value), Setting.Property.NodeScope);
-    public static final Setting<URL> IDP_SLO_REDIRECT_ENDPOINT = new Setting<>("xpack.idp.slo_endpoint.redirect", "https:",
-        value -> parseUrl("xpack.idp.slo_endpoint.redirect", value), Setting.Property.NodeScope);
-    public static final Setting<URL> IDP_SLO_POST_ENDPOINT = new Setting<>("xpack.idp.slo_endpoint.post", "https:",
-        value -> parseUrl("xpack.idp.slo_endpoint.post", value), Setting.Property.NodeScope);
-    public static final Setting<List<String>> IDP_ALLOWED_NAMEID_FORMATS = Setting.listSetting("xpack.idp.allowed_nameid_formats",
-        List.of(TRANSIENT), Function.identity(), SamlIdentityProviderBuilder::validateNameIDs, Setting.Property.NodeScope);
+    public static final Setting<URL> IDP_SSO_REDIRECT_ENDPOINT = new Setting<>(
+        "xpack.idp.sso_endpoint.redirect",
+        "https:",
+        value -> parseUrl("xpack.idp.sso_endpoint.redirect", value),
+        Setting.Property.NodeScope
+    );
+    public static final Setting<URL> IDP_SSO_POST_ENDPOINT = new Setting<>(
+        "xpack.idp.sso_endpoint.post",
+        "https:",
+        value -> parseUrl("xpack.idp.sso_endpoint.post", value),
+        Setting.Property.NodeScope
+    );
+    public static final Setting<URL> IDP_SLO_REDIRECT_ENDPOINT = new Setting<>(
+        "xpack.idp.slo_endpoint.redirect",
+        "https:",
+        value -> parseUrl("xpack.idp.slo_endpoint.redirect", value),
+        Setting.Property.NodeScope
+    );
+    public static final Setting<URL> IDP_SLO_POST_ENDPOINT = new Setting<>(
+        "xpack.idp.slo_endpoint.post",
+        "https:",
+        value -> parseUrl("xpack.idp.slo_endpoint.post", value),
+        Setting.Property.NodeScope
+    );
+    public static final Setting<List<String>> IDP_ALLOWED_NAMEID_FORMATS = Setting.listSetting(
+        "xpack.idp.allowed_nameid_formats",
+        List.of(TRANSIENT),
+        Function.identity(),
+        SamlIdentityProviderBuilder::validateNameIDs,
+        Setting.Property.NodeScope
+    );
 
-    public static final Setting<String> IDP_SIGNING_KEY_ALIAS = Setting.simpleString("xpack.idp.signing.keystore.alias",
-        Setting.Property.NodeScope);
-    public static final Setting<String> IDP_METADATA_SIGNING_KEY_ALIAS = Setting.simpleString("xpack.idp.metadata.signing.keystore.alias",
-        Setting.Property.NodeScope);
+    public static final Setting<String> IDP_SIGNING_KEY_ALIAS = Setting.simpleString(
+        "xpack.idp.signing.keystore.alias",
+        Setting.Property.NodeScope
+    );
+    public static final Setting<String> IDP_METADATA_SIGNING_KEY_ALIAS = Setting.simpleString(
+        "xpack.idp.metadata.signing.keystore.alias",
+        Setting.Property.NodeScope
+    );
 
-    public static final Setting<String> IDP_ORGANIZATION_NAME = Setting.simpleString("xpack.idp.organization.name",
-        Setting.Property.NodeScope);
-    public static final Setting<String> IDP_ORGANIZATION_DISPLAY_NAME = Setting.simpleString("xpack.idp.organization.display_name",
-        IDP_ORGANIZATION_NAME, Setting.Property.NodeScope);
-    public static final Setting<URL> IDP_ORGANIZATION_URL = new Setting<>("xpack.idp.organization.url", "http:",
-        value -> parseUrl("xpack.idp.organization.url", value), Setting.Property.NodeScope);
+    public static final Setting<String> IDP_ORGANIZATION_NAME = Setting.simpleString(
+        "xpack.idp.organization.name",
+        Setting.Property.NodeScope
+    );
+    public static final Setting<String> IDP_ORGANIZATION_DISPLAY_NAME = Setting.simpleString(
+        "xpack.idp.organization.display_name",
+        IDP_ORGANIZATION_NAME,
+        Setting.Property.NodeScope
+    );
+    public static final Setting<URL> IDP_ORGANIZATION_URL = new Setting<>(
+        "xpack.idp.organization.url",
+        "http:",
+        value -> parseUrl("xpack.idp.organization.url", value),
+        Setting.Property.NodeScope
+    );
 
-    public static final Setting<String> IDP_CONTACT_GIVEN_NAME = Setting.simpleString("xpack.idp.contact.given_name",
-        Setting.Property.NodeScope);
-    public static final Setting<String> IDP_CONTACT_SURNAME = Setting.simpleString("xpack.idp.contact.surname",
-        Setting.Property.NodeScope);
+    public static final Setting<String> IDP_CONTACT_GIVEN_NAME = Setting.simpleString(
+        "xpack.idp.contact.given_name",
+        Setting.Property.NodeScope
+    );
+    public static final Setting<String> IDP_CONTACT_SURNAME = Setting.simpleString("xpack.idp.contact.surname", Setting.Property.NodeScope);
     public static final Setting<String> IDP_CONTACT_EMAIL = Setting.simpleString("xpack.idp.contact.email", Setting.Property.NodeScope);
 
     private final SamlServiceProviderResolver serviceProviderResolver;
@@ -142,11 +177,14 @@ public class SamlIdentityProviderBuilder {
             Map.copyOf(ssoEndpoints),
             sloEndpoints == null ? Map.of() : Map.copyOf(sloEndpoints),
             Set.copyOf(allowedNameIdFormats),
-            signingCredential, metadataSigningCredential,
-            technicalContact, organization,
+            signingCredential,
+            metadataSigningCredential,
+            technicalContact,
+            organization,
             serviceProviderDefaults,
             serviceProviderResolver,
-            wildcardServiceResolver);
+            wildcardServiceResolver
+        );
     }
 
     public SamlIdentityProviderBuilder fromSettings(Environment env) {
@@ -187,7 +225,8 @@ public class SamlIdentityProviderBuilder {
             IDP_ORGANIZATION_URL,
             IDP_CONTACT_GIVEN_NAME,
             IDP_CONTACT_SURNAME,
-            IDP_CONTACT_EMAIL);
+            IDP_CONTACT_EMAIL
+        );
     }
 
     public SamlIdentityProviderBuilder serviceProviderDefaults(ServiceProviderDefaults serviceProviderDefaults) {
@@ -254,11 +293,14 @@ public class SamlIdentityProviderBuilder {
     }
 
     private static void validateNameIDs(List<String> values) {
-        final Set<String> invalidFormats =
-            values.stream().distinct().filter(e -> ALLOWED_NAMEID_FORMATS.contains(e) == false).collect(Collectors.toSet());
+        final Set<String> invalidFormats = values.stream()
+            .distinct()
+            .filter(e -> ALLOWED_NAMEID_FORMATS.contains(e) == false)
+            .collect(Collectors.toSet());
         if (invalidFormats.size() > 0) {
             throw new IllegalArgumentException(
-                invalidFormats + " are not valid NameID formats. Allowed values are " + ALLOWED_NAMEID_FORMATS);
+                invalidFormats + " are not valid NameID formats. Allowed values are " + ALLOWED_NAMEID_FORMATS
+            );
         }
     }
 
@@ -288,10 +330,13 @@ public class SamlIdentityProviderBuilder {
     }
 
     static List<X509Credential> buildCredentials(Environment env, Settings settings, String prefix, boolean allowMultiple) {
-        final X509KeyPairSettings keyPairSettings = X509KeyPairSettings.withPrefix(prefix, false);
-        final X509KeyManager keyManager = CertParsingUtils.getKeyManager(keyPairSettings, settings, null, env);
+        final SslKeyConfig keyConfig = CertParsingUtils.createKeyConfig(settings, prefix, env, false);
+        if (keyConfig.hasKeyMaterial() == false) {
+            return List.of();
+        }
+        final X509KeyManager keyManager = keyConfig.createKeyManager();
         if (keyManager == null) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         final List<X509Credential> credentials = new ArrayList<>();
@@ -308,11 +353,13 @@ public class SamlIdentityProviderBuilder {
             }
             if (selectedAliases.isEmpty()) {
                 throw new IllegalArgumentException(
-                    "The configured keystore for [" + prefix + "keystore] does not contain any RSA or EC key pairs.");
+                    "The configured keystore for [" + prefix + "keystore] does not contain any RSA or EC key pairs."
+                );
             }
             if (selectedAliases.size() > 1 && allowMultiple == false) {
                 throw new IllegalArgumentException(
-                    "The configured keystore for [" + prefix + "keystore] contains multiple private key entries, when one was expected.");
+                    "The configured keystore for [" + prefix + "keystore] contains multiple private key entries, when one was expected."
+                );
             }
         } else {
             selectedAliases.add(configAlias);
@@ -321,8 +368,14 @@ public class SamlIdentityProviderBuilder {
             try {
                 validateSigningKey(keyManager.getPrivateKey(alias));
             } catch (ElasticsearchSecurityException e) {
-                throw new IllegalArgumentException("The configured credential [" + prefix + "keystore] with alias [" + alias
-                    + "] is not a valid signing key - " + e.getMessage());
+                throw new IllegalArgumentException(
+                    "The configured credential ["
+                        + prefix
+                        + "keystore] with alias ["
+                        + alias
+                        + "] is not a valid signing key - "
+                        + e.getMessage()
+                );
             }
             credentials.add(new X509KeyManagerX509CredentialAdapter(keyManager, alias));
         }
@@ -335,15 +388,17 @@ public class SamlIdentityProviderBuilder {
         }
         final String keyType = privateKey.getAlgorithm();
         if (keyType.equals("RSA") == false && keyType.equals("EC") == false) {
-            throw new ElasticsearchSecurityException("The private key uses unsupported key algorithm type [" + keyType
-                + "], only RSA and EC are supported");
+            throw new ElasticsearchSecurityException(
+                "The private key uses unsupported key algorithm type [" + keyType + "], only RSA and EC are supported"
+            );
         }
     }
 
     private static SamlIdentityProvider.OrganizationInfo buildOrganization(Settings settings) {
         final String name = settings.hasValue(IDP_ORGANIZATION_NAME.getKey()) ? IDP_ORGANIZATION_NAME.get(settings) : null;
-        final String displayName = settings.hasValue(IDP_ORGANIZATION_DISPLAY_NAME.getKey()) ?
-            IDP_ORGANIZATION_DISPLAY_NAME.get(settings) : null;
+        final String displayName = settings.hasValue(IDP_ORGANIZATION_DISPLAY_NAME.getKey())
+            ? IDP_ORGANIZATION_DISPLAY_NAME.get(settings)
+            : null;
         final String url = settings.hasValue(IDP_ORGANIZATION_URL.getKey()) ? IDP_ORGANIZATION_URL.get(settings).toString() : null;
         if (Stream.of(name, displayName, url).allMatch(Objects::isNull) == false) {
             return new SamlIdentityProvider.OrganizationInfo(name, displayName, url);
@@ -353,8 +408,12 @@ public class SamlIdentityProviderBuilder {
 
     private static SamlIdentityProvider.ContactInfo buildContactInfo(Settings settings) {
         if (settings.hasValue(IDP_CONTACT_EMAIL.getKey())) {
-            return new SamlIdentityProvider.ContactInfo(ContactPersonTypeEnumeration.TECHNICAL,
-                IDP_CONTACT_GIVEN_NAME.get(settings), IDP_CONTACT_SURNAME.get(settings), IDP_CONTACT_EMAIL.get(settings));
+            return new SamlIdentityProvider.ContactInfo(
+                ContactPersonTypeEnumeration.TECHNICAL,
+                IDP_CONTACT_GIVEN_NAME.get(settings),
+                IDP_CONTACT_SURNAME.get(settings),
+                IDP_CONTACT_EMAIL.get(settings)
+            );
         }
         return null;
     }
